ajout photos et cv

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,8 +24,9 @@ const isHome = Astro.url.pathname === "/";
         <li><a href="#certifications" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Certifications</a></li>
         <li><a href="#technos" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Technos</a></li>
         <li><a href="#realisations" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Réalisations</a></li>
-        <li><a href="#tarifs" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Tarifs</a></li>
+        {/* <li><a href="#tarifs" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Tarifs</a></li> */}
         <li><a href="#contact" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Contacts</a></li>
+        <li><a href="/CV.pdf" target="_blank" rel="noopener noreferrer" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Voir le CV</a></li>
       </ul>
      )}
       <!-- Theme Toggle -->
@@ -47,14 +48,15 @@ const isHome = Astro.url.pathname === "/";
       )}
 
     <!-- Menu Mobile -->
-    <div id="mobile-menu" class="hidden text-center md:hidden pb-4 mt-2 rounded-lg bg-white/70 dark:bg-slate-900/70 backdrop-blur-md shadow-lg transition-all duration-300">
+    <div id="mobile-menu" class="hidden text-center md:hidden pb-4 mt-80 rounded-lg bg-white/70 dark:bg-slate-900/70 backdrop-blur-md shadow-lg transition-all duration-300">
       <ul class="space-y-2 px-4">
         <li><a href="#about" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Qui suis-je?</a></li>
-        <!-- <li><a href="#certifications" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Certifications</a></li> -->
+        <li><a href="#certifications" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Certifications</a></li>
         <li><a href="#technos" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Technos</a></li>
         <li><a href="#realisations" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Réalisations</a></li>
-        <li><a href="#tarifs" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Tarifs</a></li>
+        <!-- <li><a href="#tarifs" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Tarifs</a></li> -->
         <li><a href="#contact" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Contacts</a></li>
+        <li><a href="/CV.pdf" target="_blank" rel="noopener noreferrer" class="block px-4 py-2 hover:text-[var(--accent-dark)] rounded-lg transition-colors">Voir le CV</a></li>
       </ul>
     </div>
   </nav>
