--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -198,18 +198,18 @@ const projects = [...allProjects]
 
       <section id="contact">
         <div class="container flex flex-col justify-center items-center text-center"> 
-        <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
+        <h2 class="text-4xl font-bold mb-4">
             Contacts
         </h2>
-        <div class="flex sm:flex-col md:flex-row m-8 justify-center items-center md:items-stretch gap-10 md:gap-20">
-          <div class="text-center text-gray-600 dark:text-gray-300">
+        <div class="flex flex-col xl2:flex-row m-8 justify-center items-center xl2:items-stretch gap-10 xl2:gap-20">
+          <div class="text-center">
             <div class="flex flex-col m-8">
-              <a class="text-gray-800 text-2xl p-3 dark:text-white" 
+              <a class="text-2xl p-3 " 
                 href="mailto:lalicornecosmique62@gmail.com?subject=Contact depuis le site&body=Bonjour%20Isabelle," 
                 aria-label="lalicornecosmique62@gmail.com" data-aos="zoom-in-up" data-aos-duration="1200">
                 📧 : lalicornecosmique62@gmail.com
               </a>
-              <a class="text-gray-800 text-2xl p-3 dark:text-white" 
+              <a class="text-2xl p-3 " 
                 href="tel:+33682157497" 
                 aria-label="06 82 15 74 97 " data-aos="zoom-in-up" data-aos-duration="1200">
                 📞 : 06 82 15 74 97
